public class Lecturer extends Person {

}
